kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: devportfolio

  labels:
    app: devportfolio
    environment: production
    managed-by: kubernetes
