kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devportfolio-service
  namespace: devportfolio

  labels:
    app: devportfolio

spec:
  selector:
    app: devportfolio

  type: ClusterIP

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
