kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devportfolio-ingress
  namespace: devportfolio

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: devportfolio.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: devportfolio-service

                port:
                  number: 80
